tests/suite/snapshots/suite__check__tests__check__bad_use_conflict.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_use_conflict.xi:3:1]
   │
 3 │ foo(x:int) : int {
   · ─┬─  
   ·  ╰─── Implementation does not match signature
───╯

